--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;600&family=Satisfy&display=swap');
 html {
-  background: url('background.png') no-repeat center center fixed;
+  background: url('../img/background.png') no-repeat center center fixed;
   background-size: cover;
 }
 #howtouseContainer {
