--- a/css/style.css
+++ b/css/style.css
@@ -84,25 +84,40 @@ html {
   position: relative;
   top: -35px;
 }
+#age {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
 #txtIm {
   font-size: 35px;
   font-family: 'Oswald', sans-serif;
   font-weight: 400;
   color: rgb(255, 236, 175);
-  line-height: 1.2;
-  text-align: left;
-  position: relative;
-  width: 50%;
+  line-height: 2;
 }
-#inpYears {
-  font-size: 70px;
+#inpName {
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 30px;
   font-family: 'Oswald', sans-serif;
   font-weight: 600;
   color: rgb(255, 176, 127);
   font-weight: bold;
-  line-height: 1.2;
-  text-align: right;
-  width: 100px;
+  line-height: 1;
+  width: 150px;
+  border: none;
+}
+#inpYears {
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 40px;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 600;
+  color: rgb(255, 176, 127);
+  font-weight: bold;
+  line-height: 1;
+  width: 70px;
   border: none;
 }
 .cakeContainer {
@@ -165,9 +180,16 @@ html {
 #botCake {
   top: 20px;
 }
+#orangeCake {
+  background-color: rgb(240, 159, 46);
+  width: 274px;
+}
+#orangeCake:hover {
+  background-color: rgb(164, 85, 25);
+}
 #redCake {
   background-color: rgb(243, 21, 89);
-  width: 304px;
+  width: 324px;
 }
 #redCake:hover {
   background-color: rgb(188, 12, 65);
